# insta-content-extractor

./: .gitignore  README.md  extractor.py  main.py  pyproject.toml  requirements.txt
src/social_content_extractor/: __init__.py  __main__.py  cli.py
src/social_content_extractor/extractor/: __init__.py  constants.py  core.py  sources.py  text.py
tests/: test_extractor.py  test_main.py
